; ModuleID = '/home/carl/AnghaBench/tig/src/extr_view.c_reset_view_history.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_view.c_reset_view_history.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view_history = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reset_view_history(%struct.view_history* %0) #0 {
  %2 = alloca %struct.view_history*, align 8
  store %struct.view_history* %0, %struct.view_history** %2, align 8
  br label %3

3:                                                ; preds = %7, %1
  %4 = load %struct.view_history*, %struct.view_history** %2, align 8
  %5 = call i64 @pop_view_history_state(%struct.view_history* %4, i32* null, i32* null)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %3
  br label %3

8:                                                ; preds = %3
  ret void
}

declare dso_local i64 @pop_view_history_state(%struct.view_history*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
